switch all JS deps to Bower

--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
     "tests"
   ],
   "dependencies": {
-    "angular-ui-ace": "bower"
+    "angular-ui-ace": "bower",
+    "jasmine-core": "~2.3.4"
   }
 }
