--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "gulp": "~3.9.0",
     "gulp-concat": "~2.6.0",
     "gulp-uglify": "~1.4.1",
-    "gulp-notify": "~2.2.0"
+    "gulp-notify": "~2.2.0",
+    "gulp-gh-pages": "~0.5.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
