--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "gulp-concat": "~2.6.0",
     "gulp-uglify": "~1.4.1",
     "gulp-notify": "~2.2.0",
-    "gulp-gh-pages": "~0.5.2"
+    "gulp-gh-pages": "~0.5.2",
+    "gulp-ng-annotate": "~1.1.0",
+    "merge2": "~0.3.6"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
