Rebrand to Jasmine Fiddle

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "merge2": "~0.3.6"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "server": "node index.js"
   },
   "author": "",
   "license": "BSD-2-Clause"
